--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-flask==1.1.2 
+flask==1.0.0 
 numpy==1.19.4
 pandas==1.1.3
-json==2.0.9
+#json==2.0.9
 werkzeug==0.14.1
-sklearn==0.23.2
+#sklearn==0.23.2
 
 
 
